nunaliit2-js/src/main/js/nunaliit2/css/basic/n2.couchEdit.css
/* Following definitions are for n2.couchEdit */

/* DIV that holds editor accordion */
.n2_display_format_tiled .n2CouchEditor_container {
	padding: 15px 20px;
	width: 600px;
}

/* Remove extra white space in accordion */
div.n2CouchEditor_container .ui-accordion-content {
	padding: 0 0 0 0;
}

/* Hide portion of the 'add file' form that should not
   appear during the dialog */
.editorAddFileDialog .editorAddFileFormEditorLine {
	display: none;
}


/* Hide portion of the 'add file' form that should not
   appear when form is attached to editor */
.editorAttachFile .editorAddFileFormDialogLine {
	display: none;
}

.editorSelectDocumentDialogResults {
	overflow: auto;
	max-height: 400px;
}

/* Attachment Editor */
.attachmentEditor_att form.attachmentEditor_form input {
	display: none;
}

form.attachmentEditor_creationForm {
	clear: both;
  height: 100px;
  margin-top: 10px;
}

form.attachmentEditor_creationFormWithVideo {
	height: 275px;
}

.attachmentEditor_label {
	padding-right: 3px;
}

.attachmentEditor_delete {
	padding-left: 3px;
}

.attachmentEditor_photoPreview {
  max-width: 200px;
  max-height: 200px;
}

.attachmentEditor_cordovaCaptureButtonsContainer {
  float: left;
  width: 29%;
  margin-bottom: 15px;
}

.attachmentEditor_uploadTabs {
	float: left;
	border: 1px solid #ddd;
	width: 29%;
	margin-bottom: 15px;
}

.attachmentEditor_uploadTabs button {
	display: block;
	color: black;
	padding: 6px 6px;
	width: 100%;
	border: 1px solid #ddd;
	outline: none;
	text-align: left;
	cursor: pointer;
	transition: 0.3s;
	background-color: #f5f5f5;
	font-weight: bold;
	font-size: 1em;
	font-family: helvetica, sans-serif;
}

.attachmentEditor_uploadTabs button:disabled {
	color: #888;
}

.attachmentEditor_uploadTabs button:hover {
	background-color: #ddd;
}

.attachmentEditor_uploadTabs button.active {
	background-color: #ccc;
	color: black;
}

.attachmentEditor_uploadTabContent {
	display: none;
	padding-left: 2%;
	overflow: auto;
}

.attachmentEditor_clearfix {
	display: block;
	height: 0;
	clear: both;
	visibility: hidden;
}

.attachmentEditor_sectionLabel {
	font-weight: bold;
	float: left;
	margin: 0;
	padding-right: 8px;
	width: 30%;
}

.attachmentEditor_micButton {
	background-image: url('/js-external/images/open-iconic/microphone-6x-white.png');
	background-size: 75% 75%;
	background-color: #328643;
	border-radius: 50%;
	border: 5px solid #328643;
	height: 45px;
	width: 45px;
	background-repeat: no-repeat;
	background-position: center;
}

.attachmentEditor_micButton:disabled {
	background-color: #d3d3d3;
	border-color: #d3d3d3;
}

.attachmentEditor_videoButton {
	background-image: url('/js-external/images/open-iconic/video-6x-white.png');
	background-size: 75% 75%;
	background-color: #328643;
	border-radius: 50%;
	border: 5px solid #328643;
	height: 45px;
	width: 45px;
	background-repeat: no-repeat;
	background-position: center;
	vertical-align: top;
}

.attachmentEditor_videoButton:disabled {
	background-color: #d3d3d3;
	border-color: #d3d3d3;
}

.attachmentEditor_stopRecordingButton {
	background-image: url('/js-external/images/open-iconic/media-stop-6x-white.png');
	background-size: 100% 100%;
	border-radius: 50%;
	height: 45px;
	width: 45px;
	margin: auto;
}

.attachmentEditor_videoRecordingContainer > .attachmentEditor_stopRecordingButton {
	vertical-align: top;
}

.attachmentEditor_stopRecordingButton {
	background-color: #f3494c;
	border: 5px solid #f3494c;
}

.attachmentEditor_stopRecordingButton:disabled {
	background-color: #d3d3d3;
	border: 5px solid #d3d3d3;
}

.attachmentEditor_recordingContainer, .attachmentEditor_videoRecordingContainer {
	float: left;
	text-align: center;
}

.attachmentEditor_videoRecordingContainer > .attachmentEditor_meVideo {
  max-width: 322px;
  max-height: 300px;
  margin-left: 25px;
	float: right;
}

.attachmentEditor_recordingContainer > audio {
	margin-left: 25px;
}

/* Related Doc */
.n2RelatedDoc_dialog .attachmentEditor_label {
	display: none;
}

